fix(deps): return 404 instead of 500 for a nonexistent node, and run the ITs against real containers (#168)